# BlackJack

python/: pyproject.toml
python/blackjack/: card.py  deck.py  program.py  suit.py
python/tests/: test_card.py  test_deck.py  test_program.py
